<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_weather"
        android:icon="@drawable/ic_weather"
        android:title="@string/nav_weather" />
    
    <item
        android:id="@+id/nav_assistant"
        android:icon="@drawable/ic_assistant"
        android:title="@string/nav_assistant" />
    
    <item
        android:id="@+id/nav_images"
        android:icon="@drawable/ic_images"
        android:title="@string/nav_images" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
